// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Context> <ConsumerData> can get properties of context 1`] = `
<p
  className="price"
>
  0 €
</p>
`;

exports[`<Context> <ConsumerData> renders 1`] = `
<p
  className="price"
>
  0.1 €
</p>
`;

exports[`<Context> <Context> renders 1`] = `
Array [
  "l10n",
  "products",
  "items",
  "total",
  "onData",
]
`;

exports[`<Context> <ProviderData> renders 1`] = `null`;
